
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;


 int recv (int,int *,int,int ) ;

int tcp_recv(int sd, u_char *data, int len) {
    int t;

    while(len) {
        t = recv(sd, data, len, 0);
        if(t <= 0) return(-1);
        data += t;
        len -= t;
    }

    return(0);
}
